--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Cambia el src a la ruta relativa -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
